# ros-perception-pipeline

./: .flake8  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.cuda  Dockerfile.ubuntu  LICENSE  README.md  contributing.md  detector_plugin.md  package.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull-request-template.md
.github/issues_and_bugs/: bug_report.md  feature_request.md
.github/workflows/: build_and_test.yml
config/: config.yaml
docker_scripts/: ddsconfig.xml  run_devel.sh
docker_scripts/bash_scripts/: launch_controller.sh
docker_scripts/run_scripts/: base.sh  control.sh  devel.sh  enter_bash.sh  publisher.yaml  start.sh  stop.sh
image_preprocessing/: CMakeLists.txt  package.xml
image_preprocessing/config/: params.yaml
image_preprocessing/include/image_preprocessing/: image_process_function.cpp  image_process_node.hpp
image_preprocessing/launch/: img_process.launch.py  img_process.py
image_preprocessing/src/: image_process_node.cpp  pre_processing_functions.cpp  test_node.cpp
instance_segmentation/: package.xml  setup.cfg  setup.py
instance_segmentation/config/: params.yaml
instance_segmentation/instance_segmentation/: InstanceSegmentation.py  SegmentatorBase.py
instance_segmentation/instance_segmentation/Segmentators/: YOLOv8.py  yolov8.py
instance_segmentation/launch/: instance_segmentation.launch.py
launch/: perception.launch
masks_msgs/: CMakeLists.txt  package.xml
masks_msgs/msg/: Mask.msg  MaskArray.msg
models/: classes.txt
nodes/: PerceptionActionServer.py
object_detection/: package.xml  requirements.txt  retina.txt  setup.cfg  setup.py  yoloV8.txt
object_detection/config/: object_detection.yaml  params.yaml
object_detection/launch/: object_detection.launch.py
object_detection/object_detection/: DetectorBase.py  ObjectDetection.py  RetinaNet_test.py
object_detection/object_detection/Detectors/: DetectorBase.py  EfficientDet.py  RetinaNet.py  RetinaNet_plugin.py  YOLOv5.py  YOLOv8.py
object_detection/test/: test_flake8.py
perception_bringup/: CMakeLists.txt  package.xml
perception_bringup/config/: bridge.yaml
perception_bringup/env_hooks/: perception_bringup.sh.in
perception_bringup/launch/: playground.launch.py
perception_bringup/models/adhesive/: model.config  model.sdf
perception_bringup/models/first_aid/: model.config  model.sdf
perception_bringup/models/medicine/: model.config  model.sdf
perception_bringup/models/plastic_cup/: model.sdf
perception_bringup/models/table/: model.sdf
perception_bringup/worlds/: playground.sdf
scripts/: Utils.py  efficient_det.py  perception_pipeline_node.py  perception_yolo_new.py  test_node.py
scripts/utils/: classes.txt  classes_v8.txt
src/perception_pipeline/: EfficientDet.py  YOLOPerception.py  YOLOv8.py
srv/: find_object.srv
yolo_catkin/devel/: .catkin  .rosinstall  local_setup.sh
yolo_catkin/devel/lib/pkgconfig/: aruco_navigation.pc  yolov8_test.pc
yolo_catkin/src/yolov8_test/: CMakeLists.txt
yolo_catkin/src/yolov8_test/model_notebook/: Custom_detector_v8 (1).ipynb  README.md  random.py
(+4 files in other folders)
